@@ -1,3 +1,9 @@
+2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Convert array type names from trailing "[]" to leading "*".
+
+	* types-table.scm (test:set!-m): ...here, in table def.
+
 2014-12-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[v] Add "test" to kill daemon.
